# rag-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/rag-embeddings/: Cargo.toml
crates/rag-embeddings/src/: embedding.rs  lib.rs  main.rs
crates/rag-embeddings/src/client/: mod.rs  qwen.rs
crates/rag-embeddings/src/database/: mod.rs  pgvector.rs
crates/rag-embeddings/src/embedding/: mod.rs  qwen.rs
crates/rag-indexing/: Cargo.toml
crates/rag-indexing/src/: faq.rs  lib.rs  pdf_parser.rs  recursive_splitting.rs  tiktoken.rs
crates/rag-indexing/src/tree_structrue/: markdown_bulid.rs  mod.rs
crates/rag-retrieval/: Cargo.toml
crates/rsllm/: Cargo.toml
rag/: Cargo.toml
rag/src/: main.rs
rag/src/llm/: client.rs  mod.rs  tongyi.rs
