[package]
name = "rag"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.30.1"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"

async-trait = "0.1.89"

anyhow = "1.0"
dotenv = "0.15.0"


# HTTP
reqwest = {version = "0.12.24", features = ["json", "stream"]}
