[package]
name = "rag-embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.17"

anyhow = "1.0.57"

reqwest = {version = "0.12.24", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"

tokio = {version = "1.48.0", features = ["full"]}
dotenv = "0.15.0"
uuid = "1.18.1"

chrono = {version = "0.4.42", features = ["serde"]}
tokio-postgres = "0.7.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
