[package]
name = "rag-indexing"
version = "0.1.0"
edition = "2024"

[dependencies]
lopdf = "0.38.0"
pdfium-render = {version = "0.8.35",features = ["thread_safe"]}
image = "0.25.8"
imageproc = "0.25.0"

rayon = "1.11.0"

thiserror = "2.0.17"

tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

tracing = "0.1.41"
tracing-subscriber = "0.2.17"

anyhow = "1.0"

regex = "1.12.2"
tiktoken-rs = {version = "0.7.0", optional = true}
chrono = {version = "0.4.42", features = ["serde"]}

once_cell = "1.21.3"

[features]
token-aware = ["tiktoken-rs"]