[package]
name = "rag-indexing"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0"
regex = "1.12.2"
tiktoken-rs = "0.7.0"
once_cell = "1.21.3"
jieba-rs = "0.7"
uuid = {version = "1.18.1", features = ["serde","v4"]}

pulldown-cmark = "0.13.0"
serde_json = "1.0"